# The-Easy-Compiller

./: .gitignore  CMakeLists.txt  Export-Code.ps1  LICENSE  Makefile  Makefile.bat  README.md  code-export.docx  makeUmlDiag.bat  output.puml  ~$de-export.docx
.VSCodeCounter/2025-04-26_17-11-28/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-04-26_17-12-24/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
CFG/: ezCFG.bnf  the ez lang CFG.txt
CFG/bison/: bison.output  bison.tab.c  bison.y  p.debug  parser.c  parser.output
demos/: DEMO1.EZ  DEMO2.EZ  DEMO3.EZ  factorial.ez  isPrime.ez  max.ez  palindrome.ez  swap.ez
headers/: Nodes.hpp  lexer.hpp
non-code ressorces/: Export-Code-to-docx.ps1  code-export.docx  patches_for_later_if_iGot_time.txt
non-code ressorces/parser table bison/: bison7.y
non-code ressorces/uml class diagram/: class_diagram.puml  makeUmlDiag.bat
non-code ressorces/use-cases diagram/: use-cases diagram v2.puml
non-code ressorces/visual dfa/: lexer dfa.dot
run/: tec_clean.bat  tec_run.bat
scripts/: bison.output  graph.dot  lexerDFAConfig.dot  makeScript.bat  parserInit.cpp  script_util.cpp  setupLexerDfa.cpp  setupParseTable.cpp  tec.ps1
scripts/setupLexerDfaScript/: script_util.cpp  setupLexerDfa.cpp
src/: DFA.cpp  Main.cpp  bison.y  doubleConfig.txt  dupe.txt  intConfig.txt  lexer.cpp  lexerDFA.txt  lexerDFAConfig.txt  parser.cpp  test.cpp  transitionMatrix.cpp
src/DFA/: DFA.cpp  DFA.hpp
src/codeGenarator/: codeGen.cpp  codeGen.hpp
src/codeGenarator/lableManager/: lableManager.cpp  lableManager.hpp
src/codeGenarator/scratch/: scratch.cpp  scratch.hpp
src/errorHandler/: errorHandler.cpp  errorHandler.hpp
src/errors/: errors.hpp
src/headers/: DFA.hpp  Nodes.hpp  lexer.hpp  parser.hpp  transitionMatrix.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/lexer/lexerDebuggingUtils/: lexerDebuggingUtils.cpp  lexerDebuggingUtils.hpp
src/main/: main.cpp
src/nodes/: Nodes.hpp  nodes.cpp
src/nodes/nodeAnalyzer/: nodeAnalyzer.cpp  nodeAnalyzer.hpp
src/parser/: initParserFunctions.cpp  parser.cpp  parser.hpp  parserDebuggingUtils.hpp
src/parser/grammerSymbol/: grammerSymbol.cpp  grammerSymbol.hpp
src/parser/parseTable/action/: action.cpp  action.hpp
src/parser/parseTable/actionTable/: actionTable.cpp  actionTable.hpp
src/parser/parseTable/gotoTable/: gotoTable.cpp  gotoTable.hpp
src/parser/productionRule/: productionRule.cpp  productionRule.hpp
src/parser/stackItem/: stackItem.cpp  stackItem.hpp
src/semantic/: semantic.cpp  semantic.hpp
src/symbolTable/: symbolTable.cpp  symbolTable.hpp
src/symbolTable/functionEntry/: functionEntry.cpp  functionEntry.hpp
src/symbolTable/scope/: scope.cpp  scope.hpp
src/symbolTable/tableEntery/: tableEntery.cpp  tableEntery.hpp
src/symbolTable/tableEntry/: tableEntry.cpp  tableEntry.hpp
src/token/: token.cpp  token.hpp
vscode-extension/ez/: CHANGELOG.md  README.md  ez-0.0.1.vsix  package.json  vsc-extension-quickstart.md
vscode-extension/ez/syntaxes/: ez.tmLanguage.json
עבודות עיוניות/דוח פרוייקט/: ~$ח פרוייקט אביב אש.docx  ~$ח פרוייקט.docx  דוח פרוייקט אביב אש.docx
עבודות עיוניות/הצעת פרוייקט/: ~$ אביב 214887556.docx  ~$עת פרוייקט - אביב אש.docx  אש אביב 214887556.docx
עבודות עיוניות/תיק פרויקט/: ~$ודת גמר קומפיילר.docx  ~$סא ראשונה תיק פרוייקט.docx  ~$עת פרוייקט.docx  ~WRL3212.tmp  גרסא ראשונה תיק פרוייקט.docx  הצעת פרוייקט.docx
